--- a/index.html
+++ b/index.html
@@ -1,40 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <!-- stylesheet -->
+  <link rel="stylesheet" href="./css/main.css">
+  <!-- fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+
   <title>Frontend Mentor | FAQ Accordion Card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
-
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
-
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
-
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
-
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="cover-img-mobile">
+    <div class="center-box">
+      <div class="bg-pattern">
+      </div>
+      <div class="woman-online">
+      </div>
+    </div>
   </div>
+
+  <div class="cover-img-desktop">
+    <div class="mask">
+      <div class="bg-pattern">
+      </div>
+      <div class="woman-online">
+      </div>
+    </div>
+    <div class="box">
+    </div>
+  </div>
+
+  <div class="page-wrapper">
+    <div class="card flex-container-no-space">
+      <div class="spaceholder">
+      </div>
+      <div class="content">
+        <h1 class="title">
+          FAQ
+        </h1>
+        <div class="question-and-answer">
+
+          <div class="flex-container-space-between">
+            <div>
+              <p class="question">
+                How many team members can I invite?
+              </p>
+              <p class="answer answer-collapsed">
+                You can invite up to 2 additional users on the Free plan. There is no limit on
+                team members for the Premium plan.
+              </p>
+            </div>
+            <div class="expand-icon">
+              <img src="./images/icon-arrow-down.svg" alt="./images/icon-arrow-down.svg">
+            </div>
+          </div>
+          <hr>
+
+          <div class="flex-container-space-between">
+            <div>
+              <p class="question">
+                What is the maximum file upload size?
+              </p>
+              <p class="answer answer-collapsed">
+                No more than 2GB. All files in your account must fit your allotted storage space.
+              </p>
+            </div>
+            <div class="expand-icon">
+              <img src="./images/icon-arrow-down.svg" alt="./images/icon-arrow-down.svg">
+            </div>
+          </div>
+          <hr>
+
+          <div class="flex-container-space-between">
+            <div>
+              <p class="question">
+                How do I reset my password?
+              </p>
+              <p class="answer answer-collapsed">
+                Click “Forgot password” from the login page or “Change password” from your profile page.
+                A reset link will be emailed to you.
+              </p>
+            </div>
+            <div class="expand-icon">
+              <img src="./images/icon-arrow-down.svg" alt="./images/icon-arrow-down.svg">
+            </div>
+          </div>
+          <hr>
+
+          <div class="flex-container-space-between">
+            <div>
+              <p class="question">
+                Can I cancel my subscription?
+              </p>
+              <p class="answer answer-collapsed">
+                Yes! Send us a message and we’ll process your request no questions asked.
+              </p>
+            </div>
+            <div class="expand-icon">
+              <img src="./images/icon-arrow-down.svg" alt="./images/icon-arrow-down.svg">
+            </div>
+          </div>
+          <hr>
+
+          <div class="flex-container-space-between">
+            <div>
+              <p class="question">
+                Do you provide additional support?
+              </p>
+              <p class="answer answer-collapsed">
+                Chat and email support is available 24/7. Phone lines are open during normal business hours.
+              </p>
+            </div>
+            <div class="expand-icon">
+              <img src="./images/icon-arrow-down.svg" alt="./images/icon-arrow-down.svg">
+            </div>
+          </div>
+          <hr>
+
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Tan Yuexi</a>.
+  </div>
+  </div>
+
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="./script/index.js" charset="utf-8"></script>
 </html>
