put back jquery

--- a/index.html
+++ b/index.html
@@ -136,6 +136,6 @@
   </div>
 
 </body>
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="./script/index.js" charset="utf-8"></script> -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="./script/index.js" charset="utf-8"></script>
 </html>
